0.33

[BUG FIXES]

- The fixes in 0.30 for subtract_datetime() crossing a DST change had
a bug. When subtracting two dates, both occurring on a DST change
date, but where the dates did not cross the change, the answer was off
by an hour. Reported by Chris Prather. See RT 20697.

- Borrowed a tweak from version.pm's Makefile.PL to make compiler
detection work with MSVC.


0.32    2006-07-24

[BUG FIXES]

- Change how C compiler detection is done in the Makefile.PL so it
does not rely on having make on the system. The new way should work on
(most?) Unix and Win32 systems. Suggested by David Golden. See RT
18969.


0.31    2006-05-21

[ ENHANCEMENTS ]

- Switched some uses of die() to Carp::croak(), where
appropriate. This should make error messages more useful in many
cases. Based on a suggestion by Max Maischein. See RT tickets 11692 &
18728.

[ BUG FIXES ]

- Removed all uses of UNIVERSAL::isa and UNIVERSAL::can as functions.

- Tweaked 20infinite.t test to give more useful output for some
failures, though it probably doesn't fix them. See RT 17390.


0.30    2005-12-22

[ ENHANCEMENTS ]

- Expanded and rewrote the docs on date math to try to explain exactly
how DateTime.pm works, and in particular cover the problems DST
introduces to various types of date math.  The docs now also include
some specific recommendations on getting sane results from datetime
math.

- Added calendar_duration() and clock_duration() methods to
DateTime::Duration

- Explicitly override the stringification method for
DateTime::Infinite objects.  They now stringify as whatever the IEEE
infinity and negative infinity numbers stringify to on your platform.
On Linux this is "inf" and "-inf". CPAN RT #16632.

[ BUG FIXES ]

- delta_md() and delta_days() did not always return correct values
when crossing a DST change.

- The pure Perl version of the code had a dependency ordering problem
where DateTime::LeapSecond depended on other pure Perl code that