@@ -2,7 +2,7 @@
 
 use strict;
 
-use Test::More tests => 2;
+use Test::More tests => 8;
 
 use DateTime;
 
@@ -17,4 +17,28 @@ use DateTime;
                             hour => 20,   minute => 10, second => 10 );
 
     is( "$dt", '2050-01-15T20:10:10', 'stringification overloading' );
+
+    eval { $dt + 1 };
+    like( $@, qr/Cannot add 1 to a DateTime object/,
+          'Cannot add plain scalar to a DateTime object' );
+
+    eval { $dt + bless {}, 'FooBar' };
+    like( $@, qr/Cannot add FooBar=HASH\([^\)]+\) to a DateTime object/,
+          'Cannot add plain FooBar object to a DateTime object' );
+
+    eval { $dt - 1 };
+    like( $@, qr/Cannot subtract 1 from a DateTime object/,
+          'Cannot subtract plain scalar from a DateTime object' );
+
+    eval { $dt - bless {}, 'FooBar' };
+    like( $@, qr/Cannot subtract FooBar=HASH\([^\)]+\) from a DateTime object/,
+          'Cannot subtract plain FooBar object from a DateTime object' );
+
+    eval { $dt > 1 };
+    like( $@, qr/A DateTime object can only be compared to another DateTime object/,
+          'Cannot compare a DateTime object to a scalar' );
+
+    eval { $dt > bless {}, 'FooBar' };
+    like( $@, qr/A DateTime object can only be compared to another DateTime object/,
+          'Cannot compare a DateTime object to a FooBar object' );
 }
