@@ -1,6 +1,12 @@
 0.33
 
-[BUG FIXES]
+[ ENHANCEMENTS ]
+
+- Attempting to do an overloaded operation (add, subtract, compare)
+with an inappropriate argument (like $dt + 1) gives a better error
+message.
+
+[ BUG FIXES ]
 
 - The fixes in 0.30 for subtract_datetime() crossing a DST change had
 a bug. When subtracting two dates, both occurring on a DST change
@@ -13,7 +19,7 @@ detection work with MSVC.
 
 0.32    2006-07-24
 
-[BUG FIXES]
+[ BUG FIXES ]
 
 - Change how C compiler detection is done in the Makefile.PL so it
 does not rely on having make on the system. The new way should work on
